<resources>
    <string name="app_name">专家上门</string>
    <string name="title_activity_main">主页</string>

    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="registered_account">注册新账号</string>
    <string name="Get_verification_code">获取验证码</string>
    <string name="Verification_Code">验证码</string>

    <string name="Please_enter_cell_phone_number">请输入手机号</string>
    <string name="Please_enter_new_cell_phone_number">请输入新手机号</string>
    <string name="cell_phone_number">手机号</string>
    <string name="Please_enter_email">请输入邮箱</string>
    <string name="email">邮箱</string>
    <string name="Please_enter_sex">请输入性别</string>
    <string name="Please_enter_birthday">请输入出生日期</string>


    <string name="Please_input_a_password">请输入密码</string>
    <string name="Full_name">姓名</string>
    <string name="Please_input_your_name">请输入姓名</string>
    <string name="Please_input_ID_number">请输入证件号码</string>
    <string name="ID_number">证件号码</string>
    <string name="Click_Select_document_type">点击选择证件类型</string>
    <string name="Click_Select_order">点击选择订单</string>
    <string name="document_type">证件类型</string>
    <string name="New_user_registration">新用户注册</string>
    <string name="Retrieve_the_password">找回密码</string>
    <string name="Forget_the_password">忘记密码？</string>
    <string name="Password">密码</string>
    <string name="Password_confirmation">密码确认</string>
    <string name="confirm">确认</string>
    <string name="next">下一步</string>

    <string name="sex">性别</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="Date_of_birth">出生日期</string>
    <string name="Relationship_with_you">与您的关系</string>
    <string name="identification_card">身份证</string>
    <string name="passport">护照</string>
    <string name="Types_of_documents_in_Hong_Kong_Macao_and_Taiwan">港澳台证件类型</string>

    <string name="children">子女</string>
    <string name="spouse">配偶</string>
    <string name="Brother_and_sister">兄妹</string>
    <string name="Friend">朋友</string>
    <string name="parent">父母</string>
    <string name="other_relatives">其他亲属</string>


    <string name="Cell_phone_format_error">手机格式错误</string>
    <string name="Incorrect_password_format">密码格式错误</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="Add_new_address">添加新地址</string>
    <string name="Edit_new_address">编辑地址</string>


    <string name="My_address">我的地址</string>
    <string name="add_patient">添加病人</string>
    <string name="menu_expert">预约专家</string>
    <string name="menu_order">我的订单</string>
    <string name="menu_consultation">我的咨询</string>
    <string name="menu_user_info">人员资料</string>
    <string name="menu_pay">支付</string>
    <string name="menu_friend">邀请有礼</string>
    <string name="menu_feedback">意见反馈</string>
    <string name="menu_help">帮助</string>
    <string name="menu_setting">设置</string>
    <string name="menu_quit">退出</string>


    <string name="Particulars_of_information">资料详情</string>

    <string name="Receipt">接单</string>
    <string name="Modification_time">修改时间</string>
    <string name="Agree">同意</string>
    <string name="Refuse">拒绝</string>
    <string name="Maintain_the_original_time">维持原时间</string>
    <string name="Cancel_order">取消订单</string>
    <string name="goto_pay">去支付</string>
    <string name="evaluate">评价</string>


    <string name="bank">银行卡</string>
    <string name="add_bank">添加银行卡</string>
    <string name="edit_bank">编辑银行卡</string>


    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="app_continue">继续</string>
    <string name="app_tip">提示</string>
    <string name="app_send">发送</string>
    <string name="app_set">设置</string>
    <string name="app_save">保存</string>
    <string name="app_delete">删除</string>
    <string name="app_nextstep">下一步</string>
    <string name="app_prevstep">上一步</string>
    <string name="app_finish">完成</string>
    <string name="app_find">查找</string>
    <string name="app_edit">编辑</string>

    <!-- applet -->
    <string name="applet_secimg_title">填写验证码</string>
    <string name="applet_secimg_change">换一张图片</string>
    <string name="applet_seccode_tip">验证码不能为空</string>
    <string name="applet_seccode_fail_tip">验证码错误，请重新输入</string>

    <!-- verify -->
    <string name="verify_password_null_tip">密码不能为空，请输入密码</string>

    <!-- format -->
    <string name="fmt_date">M月d日</string>
    <string name="fmt_longdate">yyyy年M月d日</string>
    <string name="fmt_datetime" formatted="false">M月d日 %skk:mm</string>
    <string name="fmt_patime">kk:mm</string>
    <string name="fmt_longtime" formatted="false">yyyy年M月d日 %skk:mm</string>
    <string name="fmt_in60min" formatted="false">%d分钟前</string>
    <string name="fmt_justnow">1分钟内</string>
    <string name="fmt_dawn">凌晨</string>
    <string name="fmt_morning">早上</string>
    <string name="fmt_noon">中午</string>
    <string name="fmt_afternoon">下午</string>
    <string name="fmt_evening">晚上</string>
    <string name="fmt_pre_yesterday">昨天</string>
    <string name="fmt_iap_err" formatted="false">网络连接不可用，请稍候重试</string>

    <string name="hello">Hello World, SDKSampleActivity!</string>
    <string name="app_share">分享</string>

    <string name="enter">这是SDK_Sample的入口界面</string>
    <string name="reg">将该app注册到微信</string>
    <string name="goto_send">跳转到发消息界面</string>
    <string name="goto_pay_activity">跳转到支付界面</string>
    <string name="goto_fav">跳转到收藏界面</string>
    <string name="launch_wx">启动微信</string>
    <string name="check_timeline_supported">检查是否支持发送到朋友圈</string>

    <string name="send_to_wx_title">发送到微信</string>
    <string name="get_from_wx_title">从微信接收</string>
    <string name="show_from_wx_title">显示微信请求的消息</string>
    <string name="pay_by_wx_title">通过微信支付</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>

    <string name="launch_from_wx">Launch From Weixin</string>

    <!-- WXMediaMessage -->
    <string name="input_openid">输入openid</string>
    <string name="input_scope">输入scope</string>

    <string name="send">发送到微信</string>
    <string name="receive">从微信接收</string>

    <string name="is_timeline">是否分享到朋友圈</string>
    <string name="send_text">发送文本</string>
    <string name="send_text_default">这段文字发送自微信SDK示例程序</string>

    <string name="send_img">发送图片</string>
    <string-array name="send_img_item">
        <item>发送图片的二进制数据</item>
        <item>发送图片的本地路径</item>
        <item>发送图片的URL</item>
    </string-array>
    <string name="send_img_file_not_exist">文件不存在</string>

    <string name="send_file">发送文件</string>
    <string-array name="send_file_item">
        <item>发送文件的二进制数据</item>
        <item>发送文件的本地路径</item>
    </string-array>
    <string name="send_file_file_not_exist">文件不存在</string>

    <string name="send_pic">发送照片</string>

    <string name="send_music">发送音乐</string>
    <string-array name="send_music_item">
        <item>发送音乐url</item>
        <item>发送低带宽音乐url</item>
    </string-array>

    <string name="send_video">发送视频</string>
    <string-array name="send_video_item">
        <item>发送视频url</item>
        <item>发送低带宽视频url</item>
    </string-array>

    <string name="send_webpage">发送网页</string>
    <string-array name="send_webpage_item">
        <item>发送网页url</item>
    </string-array>

    <string name="send_appdata">发送app消息</string>
    <string-array name="send_appdata_item">
        <item>发送app文件本地路径</item>
        <item>发送app二进制数据</item>
        <item>发送无附件的app</item>
    </string-array>

    <string name="send_emoji">发送表情消息</string>
    <string-array name="send_emoji_item">
        <item>发送表情本地路径</item>
        <item>发送表情二进制数据</item>
    </string-array>

    <string-array name="send_emoji_item_format">
        <item>发送GIF图片</item>
        <item>发送非GIF图片</item>
    </string-array>

    <!-- GetFromWXActivity -->
    <string name="share_text_to_weixin">回应文本到微信</string>
    <string name="share_text_default">这段文字回应自微信SDK示例程序</string>
    <string name="share_url_to_weixin">回应URL到微信</string>
    <string name="share_pic_to_weixin">回应图片到微信</string>
    <string name="share_music_to_weixin">回应音乐到微信</string>
    <string name="share_video_to_weixin">回应视频到微信</string>
    <string name="share_appdata_to_weixin">回应app消息到微信</string>

    <string name="register_as_weixin_app_sender">注册微信事件发送器</string>
    <string name="get_token_from_weixin">获取微信访问Token</string>
    <string name="unregister_from_weixin">从微信反注册</string>

    <string name="show_from_wx_tip">这个界面用于显示微信向第三方app请求显示的信息</string>

    <!-- PayActivity -->
    <string name="pay_by_wx">客户端签名微信支付</string>
    <string name="pay_by_wxap">服务器端签名微信支付</string>
    <string name="check_pay">检查微信版本是否支持支付</string>
    <string name="input_reqkey">输入reqkey</string>
    <string name="input_package_value">输入package value</string>
    <string name="input_sign">输入sign</string>
    <string name="getting_access_token">正在获取access token...</string>
    <string name="get_access_token_succ">获取access token成功</string>
    <string name="get_access_token_fail" formatted="false">获取access token失败，原因%s</string>
    <string name="getting_prepayid">正在获取预支付订单...</string>
    <string name="paying">支付中</string>
    <string name="get_prepayid_succ">获取prepayid成功</string>
    <string name="get_prepayid_fail" formatted="false">获取prepayid失败，原因%s</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

</resources>
