<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fffbfaf8">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginLeft="40dp"
                      android:layout_marginRight="40dp"
                      android:paddingBottom="40dp"
                      android:orientation="vertical">
            <!--用户名-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_user_name"/>
                <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        style="@style/register_panel_edit"
                        android:contentDescription="@string/Full_name"
                        android:hint="@string/Please_input_your_name"/>
            </LinearLayout>
            <!--证件类型-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_idcard"/>
                <TextView
                        android:id="@+id/tv_card_type"
                        android:layout_width="match_parent"
                        style="@style/input_panel_edit_with_right"
                        android:contentDescription="@string/document_type"
                        android:hint="@string/Click_Select_document_type"/>
            </LinearLayout>
            <!--证件号码-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_idcard"/>
                <EditText
                        android:id="@+id/et_card_number"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/register_panel_edit"
                        android:contentDescription="@string/ID_number"
                        android:hint="@string/Please_input_ID_number"/>
                <ImageView
                        android:id="@+id/iv_ocr"
                        style="@style/register_panel_image"
                        android:layout_height="match_parent"
                        android:layout_width="60dp"
                        android:padding="10dp"
                        android:layout_margin="0dp"
                        android:src="@mipmap/ic_scan"/>
            </LinearLayout>
            <!--手机号码-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_phone"/>
                <EditText
                        android:id="@+id/et_telephone"
                        android:layout_width="match_parent"
                        style="@style/register_panel_edit"
                        android:inputType="phone"
                        android:contentDescription="@string/cell_phone_number"
                        android:hint="@string/Please_enter_cell_phone_number"/>
            </LinearLayout>
            <!--验证码-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_phone"/>
                <EditText
                        android:id="@+id/et_smscode"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/register_panel_edit"
                        android:contentDescription="@string/Verification_Code"
                        android:hint="@string/Verification_Code"/>
                <View android:layout_width="2dp"
                      android:layout_height="15dp"
                      android:background="@color/main_color"
                      android:layout_marginLeft="5dp"/>
                <TextView
                        android:id="@+id/tv_get_smscode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/Get_verification_code"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/main_color"
                        android:textSize="14sp"/>
            </LinearLayout>


            <!--电子邮箱-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_email"/>
                <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        style="@style/register_panel_edit"
                        android:inputType="textEmailAddress"
                        android:contentDescription="@string/email"
                        android:hint="@string/Please_enter_email"/>
            </LinearLayout>

            <!--性别-->
            <LinearLayout
                    android:id="@+id/ll_sex"
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_sex"/>
                <TextView
                        android:id="@+id/tv_sex"
                        android:layout_width="match_parent"
                        style="@style/input_panel_edit_with_right"
                        android:inputType="phone"
                        android:contentDescription="@string/sex"
                        android:hint="@string/Please_enter_sex"/>
            </LinearLayout>

            <!--出生日期-->
            <LinearLayout
                    android:id="@+id/ll_brithday"
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_calendar"/>
                <TextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="match_parent"
                        style="@style/input_panel_edit_with_right"
                        android:inputType="date"
                        android:contentDescription="@string/Date_of_birth"
                        android:hint="@string/Please_enter_birthday"/>
            </LinearLayout>

            <!--密码-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_password"/>
                <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        style="@style/register_panel_edit"
                        android:inputType="textPassword"
                        android:contentDescription="@string/Password"
                        android:hint="@string/Password"/>
            </LinearLayout>
            <!--密码确认-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_password"/>
                <EditText
                        android:id="@+id/et_repassword"
                        android:layout_width="match_parent"
                        style="@style/register_panel_edit"
                        android:inputType="textPassword"
                        android:contentDescription="@string/Password_confirmation"
                        android:hint="@string/Password_confirmation"/>
            </LinearLayout>

            <LinearLayout android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:layout_marginTop="15dp"
                          android:orientation="horizontal"
                          android:gravity="center_vertical"
            >
                <CheckBox
                        android:id="@+id/cb_agree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/checkbox_circle"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingLeft="8dp"
                        android:gravity="center"
                        android:text="我已阅读并同意"
                        android:textColor="@color/main_color_gray_46"
                        android:textSize="12sp"/>
                <TextView
                        android:id="@+id/tv_user_refrence"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="《专家上门咨询用户协议》"
                        android:gravity="center_vertical"
                        android:textColor="#FD4772"
                        android:textSize="14sp"
                />
            </LinearLayout>

            <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="match_parent"
                    android:layout_marginTop="29dp"
                    style="@style/button_login"
                    android:text="@string/registered_account"/>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>