<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background_color"
        tools:context=".view.activity.user.patient.AddPatientActivity">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:paddingLeft="12dp"
                      android:paddingRight="12dp"
                      android:paddingTop="30dp"
                      android:paddingBottom="20dp"
                      android:layout_marginBottom="0dp"
                      android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="请填写真实信息"
                    android:textColor="@color/main_color_gray_46"
                    android:textSize="14sp"
            />

            <!--用户名-->
            <LinearLayout
                    style="@style/input_panel_big">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_user_name"/>
                <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        style="@style/register_panel_edit"
                        android:contentDescription="@string/Full_name"
                        android:hint="@string/Please_input_your_name"/>
            </LinearLayout>
            <!--证件类型-->
            <LinearLayout
                    style="@style/input_panel_big">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_idcard"/>
                <TextView
                        android:id="@+id/tv_card_type"
                        android:layout_width="match_parent"
                        style="@style/input_panel_edit_with_right"
                        android:contentDescription="@string/document_type"
                        android:hint="@string/Click_Select_document_type"/>
            </LinearLayout>
            <!--证件号码-->
            <LinearLayout
                    style="@style/input_panel_big">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_idcard"/>
                <EditText
                        android:id="@+id/et_card_number"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/register_panel_edit"
                        android:contentDescription="@string/ID_number"
                        android:hint="@string/Please_input_ID_number"/>

                <ImageView
                        android:id="@+id/iv_ocr"
                        style="@style/register_panel_image"
                        android:layout_height="match_parent"
                        android:layout_width="60dp"
                        android:padding="15dp"
                        android:layout_margin="0dp"
                        android:src="@mipmap/ic_scan"/>
            </LinearLayout>

            <!--性别·-->
            <LinearLayout
                    android:id="@+id/ll_sex"
                    style="@style/input_panel_big">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_sex"/>
                <TextView
                        android:id="@+id/tv_sex"
                        android:layout_width="match_parent"
                        style="@style/input_panel_edit_with_right"
                        android:contentDescription="@string/sex"
                        android:hint="@string/sex"/>
            </LinearLayout>
            <!--出生日期-->
            <LinearLayout
                    android:id="@+id/ll_brithday"
                    style="@style/input_panel_big">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_calendar"/>
                <TextView
                        android:id="@+id/tv_birthday"
                        android:layout_width="match_parent"
                        style="@style/input_panel_edit_with_right"
                        android:contentDescription="@string/Date_of_birth"
                        android:hint="@string/Date_of_birth"/>
            </LinearLayout>

            <!--与你的关系-->
            <LinearLayout
                    style="@style/input_panel_big">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_menu_friend"/>
                <TextView
                        android:id="@+id/tv_relationship"
                        android:layout_width="match_parent"
                        style="@style/input_panel_edit_with_right"
                        android:contentDescription="@string/Relationship_with_you"
                        android:hint="@string/Relationship_with_you"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/tv_add_patient"
                    android:layout_width="match_parent"
                    android:layout_marginTop="29dp"
                    style="@style/button_big"
                    android:text="@string/confirm"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>