<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fffbfaf8">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:layout_marginLeft="40dp"
                      android:layout_marginRight="40dp"
                      android:paddingBottom="40dp"
                      android:orientation="vertical">

            <!--手机号码-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_phone"/>
                <EditText
                        android:id="@+id/et_telephone"
                        android:layout_width="match_parent"
                        style="@style/register_panel_edit"
                        android:inputType="phone"
                        android:contentDescription="@string/cell_phone_number"
                        android:hint="@string/Please_enter_cell_phone_number"/>
            </LinearLayout>
            <!--验证码-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_phone"/>
                <EditText
                        android:id="@+id/et_smscode"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        style="@style/register_panel_edit"
                        android:contentDescription="@string/Verification_Code"
                        android:hint="@string/Verification_Code"/>
                <View android:layout_width="2dp"
                      android:layout_height="15dp"
                      android:background="@color/main_color"
                      android:layout_marginLeft="5dp"/>
                <TextView
                        android:id="@+id/tv_get_smscode"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/Get_verification_code"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/main_color"
                        android:textSize="14sp"/>
            </LinearLayout>

            <!--密码-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_password"/>
                <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        style="@style/register_panel_edit"
                        android:inputType="textPassword"
                        android:contentDescription="@string/Password"
                        android:hint="@string/Password"/>
            </LinearLayout>
            <!--密码确认-->
            <LinearLayout
                    style="@style/register_panel">
                <ImageView
                        style="@style/register_panel_image"
                        android:src="@mipmap/ic_password"/>
                <EditText
                        android:id="@+id/et_repassword"
                        android:layout_width="match_parent"
                        style="@style/register_panel_edit"
                        android:inputType="textPassword"
                        android:contentDescription="@string/Password_confirmation"
                        android:hint="@string/Password_confirmation"/>
            </LinearLayout>
            <TextView
                    android:id="@+id/tv_reset"
                    android:layout_width="match_parent"
                    android:layout_marginTop="29dp"
                    style="@style/button_login"
                    android:text="修改密码"/>
        </LinearLayout>
</RelativeLayout>