<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:gravity="center"
              android:orientation="vertical">
    
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:text="@string/pay_by_wx_title"/>
    
    <Button
        android:id="@+id/appay_btn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
	    android:layout_margin="10dp"
        android:visibility="gone"
        android:text="@string/pay_by_wxap"/>
    <Button
        android:id="@+id/check_pay_btn"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
	    android:layout_margin="10dp"
        android:visibility="gone"
        android:text="@string/check_pay"/>

    <ImageView
            android:id="@+id/iv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_result_success"/>

    <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text=""
            android:textColor="@color/main_color_gray_46"
            android:textSize="14sp"
    />

    <TextView
            android:id="@+id/tv_know"
            android:layout_width="match_parent"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            style="@style/button_big"
            android:text="确定"/>

</LinearLayout>